none: fix lots of issues
- Controller lighting
- New usage image
- Fix VR UI
- Add hint on focus/free modes
- Update to lwjgl 3.2.2
- Map A to toggle labels